--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,7 +21,6 @@
     "joi-password-complexity": "^5.1.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.1",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "multer": "^1.4.5-lts.1"
   }
 }
