--- a/back/package.json
+++ b/back/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   
-    "start": "node index.js ",
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
@@ -24,3 +23,4 @@
     "multer": "^1.4.5-lts.1"
   }
 }
+
