--- a/back/package.json
+++ b/back/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "private": false,
+  "engines": {
+    "node": "^16.10.0"
+  },
   "scripts": {
     "start": "node index.js"
   },
