--- a/front/package.json
+++ b/front/package.json
@@ -8,12 +8,16 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
+    "highlight.js": "^11.7.0",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.0",
+    "react-tag-input-component": "^2.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
