--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,9 @@
     "axios": "^1.3.3",
     "date-fns": "^2.29.3",
     "highlight.js": "^11.7.0",
+    "hljs": "^6.2.3",
+    "prism": "^4.1.2",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
@@ -17,6 +20,7 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react-tag-input-component": "^2.0.2",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
